tests/errors/parser/while-without-body.expect
---CODE---
1
---STDERR---
Error: Calyx Parser:  --> 5:27
  |
5 |     while r.out with cond {
  | ...
9 |     }␊
  |     ^---------------------^
  |
  = Sequence of control statements should be enclosed in `seq` or `par`.
